platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


  late final _colyseus_get_latencyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_latency_options_t>,
              colyseus_get_latency_cb_t,
              ffi.Pointer<ffi.Void>)>>('colyseus_get_latency');
  late final _colyseus_get_latency = _colyseus_get_latencyPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<colyseus_latency_options_t>,
          colyseus_get_latency_cb_t,
          ffi.Pointer<ffi.Void>)>();

  /// Measure all endpoints in parallel and select the lowest-latency one. Returns
  /// immediately; `cb` fires once when every probe has settled (each bounded by
  /// options->timeout_ms). The `endpoints` array and its strings are borrowed and
  /// may be freed by the caller as soon as this function returns.
  void colyseus_select_by_latency(
    ffi.Pointer<ffi.Pointer<ffi.Char>> endpoints,
    int count,
    ffi.Pointer<colyseus_latency_options_t> options,
    colyseus_select_by_latency_cb_t cb,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _colyseus_select_by_latency(
      endpoints,
      count,
      options,
      cb,
      userdata,
    );
  }

  late final _colyseus_select_by_latencyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size,
              ffi.Pointer<colyseus_latency_options_t>,
              colyseus_select_by_latency_cb_t,
              ffi.Pointer<ffi.Void>)>>('colyseus_select_by_latency');
  late final _colyseus_select_by_latency =
      _colyseus_select_by_latencyPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              ffi.Pointer<colyseus_latency_options_t>,
              colyseus_select_by_latency_cb_t,
              ffi.Pointer<ffi.Void>)>();

  double colyseus_step_memo(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Double Function(ffi.Pointer<ffi.Void> userdata)>>
        compute,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _colyseus_step_memo(
      ctx,
      key,
      compute,
      userdata,
    );
  }

  late final _colyseus_step_memoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<colyseus_step_ctx_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Double Function(ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>>('colyseus_step_memo');
  late final _colyseus_step_memo = _colyseus_step_memoPtr.asFunction<
      double Function(
          ffi.Pointer<colyseus_step_ctx_t>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Double Function(ffi.Pointer<ffi.Void> userdata)>>,
          ffi.Pointer<ffi.Void>)>();

  int colyseus_step_memo_vec(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(ffi.Pointer<ffi.Double> out,
                    ffi.Pointer<ffi.Void> userdata)>>
        compute,
    ffi.Pointer<ffi.Void> userdata,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _colyseus_step_memo_vec(
      ctx,
      key,
      compute,
      userdata,
      out,
    );
  }

  late final _colyseus_step_memo_vecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<colyseus_step_ctx_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(ffi.Pointer<ffi.Double> out,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Double>)>>('colyseus_step_memo_vec');
  late final _colyseus_step_memo_vec = _colyseus_step_memo_vecPtr.asFunction<
      int Function(
          ffi.Pointer<colyseus_step_ctx_t>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(ffi.Pointer<ffi.Double> out,
                      ffi.Pointer<ffi.Void> userdata)>>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<colyseus_reconciler_t> colyseus_reconciler_create(
    ffi.Pointer<colyseus_schema_t> truth,
    ffi.Pointer<colyseus_schema_vtable_t1> vtable,
    ffi.Pointer<colyseus_input_handle_t> input,
    ffi.Pointer<colyseus_room_clock_t> clock,
    colyseus_reconciler_step_fn step,
    ffi.Pointer<colyseus_reconciler_options_t> options,
  ) {
    return _colyseus_reconciler_create(
      truth,
      vtable,
      input,
      clock,
      step,
      options,
    );
  }

  late final _colyseus_reconciler_createPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_reconciler_t> Function(
                  ffi.Pointer<colyseus_schema_t>,
                  ffi.Pointer<colyseus_schema_vtable_t1>,
                  ffi.Pointer<colyseus_input_handle_t>,
                  ffi.Pointer<colyseus_room_clock_t>,
                  colyseus_reconciler_step_fn,
                  ffi.Pointer<colyseus_reconciler_options_t>)>>(
      'colyseus_reconciler_create');
  late final _colyseus_reconciler_create =
      _colyseus_reconciler_createPtr.asFunction<
          ffi.Pointer<colyseus_reconciler_t> Function(
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<colyseus_schema_vtable_t1>,
              ffi.Pointer<colyseus_input_handle_t>,
              ffi.Pointer<colyseus_room_clock_t>,
              colyseus_reconciler_step_fn,
              ffi.Pointer<colyseus_reconciler_options_t>)>();

  void colyseus_reconciler_free(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_free(
      r,
    );
  }

  late final _colyseus_reconciler_freePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<colyseus_reconciler_t>)>>('colyseus_reconciler_free');
  late final _colyseus_reconciler_free = _colyseus_reconciler_freePtr
      .asFunction<void Function(ffi.Pointer<colyseus_reconciler_t>)>();

  ffi.Pointer<colyseus_schema_t> colyseus_reconciler_state(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_state(
      r,
    );
  }

  late final _colyseus_reconciler_statePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_schema_t> Function(
                  ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_state');
  late final _colyseus_reconciler_state =
      _colyseus_reconciler_statePtr.asFunction<
          ffi.Pointer<colyseus_schema_t> Function(
              ffi.Pointer<colyseus_reconciler_t>)>(isLeaf: true);

  void colyseus_reconciler_tick(
    ffi.Pointer<colyseus_reconciler_t> r,
    double now,
  ) {
    return _colyseus_reconciler_tick(
      r,
      now,
    );
  }

  late final _colyseus_reconciler_tickPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Double)>>('colyseus_reconciler_tick');
  late final _colyseus_reconciler_tick = _colyseus_reconciler_tickPtr
      .asFunction<void Function(ffi.Pointer<colyseus_reconciler_t>, double)>();

  double colyseus_reconciler_value(
    ffi.Pointer<colyseus_reconciler_t> r,
    ffi.Pointer<ffi.Char> field,
  ) {
    return _colyseus_reconciler_value(
      r,
      field,
    );
  }

  late final _colyseus_reconciler_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_reconciler_value');
  late final _colyseus_reconciler_value =
      _colyseus_reconciler_valuePtr.asFunction<
          double Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<ffi.Char>)>(isLeaf: true);

  void colyseus_reconciler_reset(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_reset(
      r,
    );
  }

  late final _colyseus_reconciler_resetPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_reset');
  late final _colyseus_reconciler_reset = _colyseus_reconciler_resetPtr
      .asFunction<void Function(ffi.Pointer<colyseus_reconciler_t>)>();

  int colyseus_reconciler_pending_count(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_pending_count(
      r,
    );
  }

  late final _colyseus_reconciler_pending_countPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_pending_count');
  late final _colyseus_reconciler_pending_count =
      _colyseus_reconciler_pending_countPtr
          .asFunction<int Function(ffi.Pointer<colyseus_reconciler_t>)>(
              isLeaf: true);

  double colyseus_reconciler_step_ms(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_step_ms(
      r,
    );
  }

  late final _colyseus_reconciler_step_msPtr = _lookup<
          ffi.NativeFunction<
              ffi.Double Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_step_ms');
  late final _colyseus_reconciler_step_ms = _colyseus_reconciler_step_msPtr
      .asFunction<double Function(ffi.Pointer<colyseus_reconciler_t>)>(
          isLeaf: true);

  ffi.Pointer<colyseus_drift_t> colyseus_reconciler_drift(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_drift(
      r,
    );
  }

  late final _colyseus_reconciler_driftPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_drift_t> Function(
                  ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_drift');
  late final _colyseus_reconciler_drift =
      _colyseus_reconciler_driftPtr.asFunction<
          ffi.Pointer<colyseus_drift_t> Function(
              ffi.Pointer<colyseus_reconciler_t>)>(isLeaf: true);

  double colyseus_reconciler_last_correction_mag(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_last_correction_mag(
      r,
    );
  }

  late final _colyseus_reconciler_last_correction_magPtr = _lookup<
          ffi.NativeFunction<
              ffi.Double Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_last_correction_mag');
  late final _colyseus_reconciler_last_correction_mag =
      _colyseus_reconciler_last_correction_magPtr
          .asFunction<double Function(ffi.Pointer<colyseus_reconciler_t>)>(
              isLeaf: true);

  double colyseus_reconciler_last_correction(
    ffi.Pointer<colyseus_reconciler_t> r,
    ffi.Pointer<ffi.Char> field,
  ) {
    return _colyseus_reconciler_last_correction(
      r,
      field,
    );
  }

  late final _colyseus_reconciler_last_correctionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_reconciler_last_correction');
  late final _colyseus_reconciler_last_correction =
      _colyseus_reconciler_last_correctionPtr.asFunction<
          double Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<ffi.Char>)>(isLeaf: true);

  int colyseus_reconciler_reconcile_seq(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_reconcile_seq(
      r,
    );
  }
